--- a/index.css
+++ b/index.css
@@ -141,3 +141,18 @@ button > i {
 .icons > img {
     width: 25px;
 }
+
+.portfolio--container {
+    margin-top: 27px;
+}
+
+.portfolio--title {
+    margin-bottom: 5px;
+}
+
+.portfolio--container a {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 15px;
+    color: #DCDCDC;
+}
