--- a/index.css
+++ b/index.css
@@ -82,12 +82,6 @@ body {
 }
 
 button {
-    /* display and box model */
-    width: 115px;
-    height: 34px;
-    border-radius: 6px;
-
-    /* text */
     font-size: 14px;
     font-weight: 500;
 }
@@ -97,10 +91,18 @@ button > i {
 }
 
 .btn--email {
+    /* display and box model */
+    width: 115px;
+    height: 34px;
+    border-radius: 6px;
     border: 1px solid #D1D5DB;
 }
 
 .btn--linkedin {
+    /* display and box model */
+    width: 115px;
+    height: 34px;
+    border-radius: 6px;
     border: 0;
 
     /* color */
@@ -150,9 +152,20 @@ button > i {
     margin-bottom: 5px;
 }
 
-.portfolio--container a {
+.portfolio--link-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.portfolio--link {
     font-size: 10px;
     font-weight: 400;
     line-height: 15px;
     color: #DCDCDC;
+}
+
+.portfolio--btn {
+    font-size: 10px;
+    text-decoration: none;
+    color: black;
 }
